--- a/index.css
+++ b/index.css
@@ -1,1 +1,101 @@
 /* Put your style information here! */
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Century Gothic, AppleGothic, sans-serif;
+  background-color: #eee;
+
+}
+
+.title {
+  text-align: center;
+  font-size: 2em;
+  margin-left: 10%
+  margin-right:10%;
+}
+
+.section {
+  background-color: white;
+  border-radius: 50px;
+  height: auto;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 5%;
+  padding: 10px;
+}
+
+.image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: auto;
+}
+
+.heading {
+  font-size: 2em;
+  margin-left: 8%;
+}
+
+.btext {
+  margin-right: 8%;
+  margin-left: 8%;
+}
+
+.grid-1by3 {
+  padding: 50px;
+  padding-top: 0;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: auto;
+}
+
+.grid-1by2 {
+  padding: 30px;
+  padding-top: 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+}
+
+.block1 {
+  grid-row: 1;
+  grid-column: 1;
+}
+.block2 {
+  grid-row: 1;
+  grid-column: 2;
+}
+.block3 {
+  grid-row: 1;
+  grid-column: 3;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ol {
+  margin-bottom: 50px;
+}
+
+li {
+  margin-top:10px;
+  margin-left: 10px;
+}
+
+h5 {
+  margin-top: 0;
+}
+
+h3 {
+  margin-bottom: 5px;
+}
+
+#sketch {
+  width: 75%;
+  height: auto;
+}
