--- a/index.css
+++ b/index.css
@@ -4,8 +4,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: Century Gothic, AppleGothic, sans-serif;
-  background-color: #eee;
-
+  background-color: rgb(224, 223, 223);
 }
 
 .title {
@@ -46,7 +45,7 @@ body {
   padding: 50px;
   padding-top: 0;
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 20px;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: auto;
 }
@@ -70,6 +69,11 @@ body {
 .block3 {
   grid-row: 1;
   grid-column: 3;
+}
+
+.grid-1by3 > div {
+  border-radius: 30px;
+  background-color: #faf0f5;
 }
 
 ul {
@@ -130,6 +134,7 @@ h3 {
   grid-row: 3;
   grid-column: 1;
 }
+
 .section {
   margin-right: 5%;
   margin-left: 5%;
